<resources>
	<string name="app_name">Update notifications</string>
	<string name="enable_switch">Automatic update check</string>
	<string name="running_package">Currently installed build:</string>
	<string name="last_available">Latest available build:</string>
	<string name="last_check_date">Last checked:</string>
	<string name="connect_retry">The update check failed. Please check your internet connection and try again later.</string>
	<string name="check_in_progress">Checking for updates...</string>
	<string name="nodata_recheck">No data available. Please check for updates.</string>
	<string name="nodata">No data available.</string>
	<string name="check_now">Check Now</string>
	<string name="notif_title">Build:</string>
	<string name="notif_subtitle">New build is available.</string>
	<string name="notif_content">For more info visit XDA-Developers thread.</string>
</resources>
